<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tajs" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wlcmTxt" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginTV" />

                <Button
                    android:id="@+id/regTxtVv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="registerUser"
                    android:text="@string/regTV" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTV" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unameTV" />

                <EditText
                    android:id="@+id/unameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cntctTV" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwdTV" />

                <EditText
                    android:id="@+id/pwdET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/rstBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rstBtn" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="loginUser"
                    android:text="@string/loginTV" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>