<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regTV"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unameTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/unameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/availTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/showAvailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwdTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/pwdET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confrmpwdTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/confirmPwdET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fnameTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/fnameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lnameTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/lnameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dobTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/dobET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <Button
                android:id="@+id/dpBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dpBtn" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addr1TV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/addr1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addr2TV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/addr2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cityTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/cityET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stateTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/stateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/emailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phnoTV"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/phnoET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/rstBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetFields"
                android:text="@string/rstBtn" />

            <Button
                android:id="@+id/regBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerUser"
                android:text="@string/regTV" />

            <Button
                android:id="@+id/bkBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bkBtn" />
        </TableRow>
    </TableLayout>

</ScrollView>